# wipo-patents

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/static/: app.js  chat.js  downloads.js  index.html  styles.css
data/concordance/: README.md  ipc_technology_bootstrap.csv  wipo_table2_raw.txt
scripts/: extract_europe.py  extract_to_neon.py  fwd_to_neon.py  load_orbis_export.py  parse_concordance.py  sync_to_neon.py
sql/: 00_inspect_schema.sql  01_count_families.sql  02_extract_families.sql  build_stats.sql
src/wipo_patents/: __init__.py  concordance.py  pipeline.py  schema.sql
